force-app/main/default/objects/Digital_Main_Street__c/fields/Business_Uses_S_W_Social_Conversation__c.field-meta.xml
<CustomField>
    <fullName>Business_Uses_S_W_Social_Conversation__c</fullName>
    <label>Business Uses S/W Social Conversation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>