force-app/main/default/objects/Digital_Main_Street__c/fields/Challenges__c.field-meta.xml
<CustomField>
    <fullName>Challenges__c</fullName>
    <label>Challenges</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not enough time</fullName>
            </value>
            <value>
                <fullName>Lack of financial resources</fullName>
            </value>
            <value>
                <fullName>Do not know where to start</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>