force-app/main/default/objects/Digital_Main_Street__c/fields/Click_to_receive_Yellow_Page_Listing__c.field-meta.xml
<CustomField>
    <fullName>Click_to_receive_Yellow_Page_Listing__c</fullName>
    <label>Click to receive Yellow Page Listing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>