force-app/main/default/objects/Digital_Main_Street__c/fields/Contact_DMS__c.field-meta.xml
<CustomField>
    <fullName>Contact_DMS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Digital Main Streets (Contact)</relationshipLabel>
    <relationshipName>Digital_Main_Streets4</relationshipName>
    <type>Lookup</type>
</CustomField>