force-app/main/default/objects/Digital_Main_Street__c/fields/Contact_FName__c.field-meta.xml
<CustomField>
    <fullName>Contact_FName__c</fullName>
    <formula>Contact_DMS__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact FName</label>
    <type>Text</type>
</CustomField>