force-app/main/default/objects/Digital_Main_Street__c/fields/Contact_LName__c.field-meta.xml
<CustomField>
    <fullName>Contact_LName__c</fullName>
    <formula>Contact_DMS__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact LName</label>
    <type>Text</type>
</CustomField>