force-app/main/default/objects/Digital_Main_Street__c/fields/Date_Visited__c.field-meta.xml
<CustomField>
    <fullName>Date_Visited__c</fullName>
    <label>Date Visited</label>
    <type>Date</type>
</CustomField>