force-app/main/default/objects/Digital_Main_Street__c/fields/Detailed_Notes_on_the_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Notes_on_the_Interaction__c</fullName>
    <label>Detailed Notes on the Interaction</label>
    <length>90768</length>
    <type>LongTextArea</type>
</CustomField>