force-app/main/default/objects/Digital_Main_Street__c/fields/DMS_Business_ID__c.field-meta.xml
<CustomField>
    <fullName>DMS_Business_ID__c</fullName>
    <formula>Account_DMS__r.DMS_Business_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DMS Business ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>