force-app/main/default/objects/Digital_Main_Street__c/fields/DMS_Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>DMS_Vendor_ID__c</fullName>
    <formula>Account_DMS__r.DMS_Vendor_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DMS Vendor ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>