force-app/main/default/objects/Digital_Main_Street__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Digital Main Streets (Email)</relationshipLabel>
    <relationshipName>Digital_Main_Streets</relationshipName>
    <type>Lookup</type>
</CustomField>