force-app/main/default/objects/Digital_Main_Street__c/fields/Employ_Search_Engine_Optimization__c.field-meta.xml
<CustomField>
    <fullName>Employ_Search_Engine_Optimization__c</fullName>
    <label>Employ Search Engine Optimization?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>