force-app/main/default/objects/Digital_Main_Street__c/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <label>Employee Numbers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5 or less</fullName>
            </value>
            <value>
                <fullName>20 or less</fullName>
            </value>
            <value>
                <fullName>99 or less</fullName>
            </value>
            <value>
                <fullName>Over 100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>