force-app/main/default/objects/Digital_Main_Street__c/fields/Facebook__c.field-meta.xml
<CustomField>
    <fullName>Facebook__c</fullName>
    <formula>Account_DMS__r.Facebook__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facebook</label>
    <type>Text</type>
</CustomField>