force-app/main/default/objects/Digital_Main_Street__c/fields/Good_candidate_for_a_DMS_case_study__c.field-meta.xml
<CustomField>
    <fullName>Good_candidate_for_a_DMS_case_study__c</fullName>
    <label>Good candidate for a DMS case study</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>