force-app/main/default/objects/Digital_Main_Street__c/fields/How_Often_do_you_Post_Facebook__c.field-meta.xml
<CustomField>
    <fullName>How_Often_do_you_Post_Facebook__c</fullName>
    <label>How Often do you Post (Facebook)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>