force-app/main/default/objects/Digital_Main_Street__c/fields/How_Often_Do_You_Post_Pinterest__c.field-meta.xml
<CustomField>
    <fullName>How_Often_Do_You_Post_Pinterest__c</fullName>
    <label>How Often Do You Post(Pinterest)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>