force-app/main/default/objects/Digital_Main_Street__c/fields/Instagram__c.field-meta.xml
<CustomField>
    <fullName>Instagram__c</fullName>
    <formula>Account_DMS__r.Instagram__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instagram</label>
    <type>Text</type>
</CustomField>