force-app/main/default/objects/Digital_Main_Street__c/fields/Integrated_With_Google_My_Business__c.field-meta.xml
<CustomField>
    <fullName>Integrated_With_Google_My_Business__c</fullName>
    <label>Integrated With Google My Business?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>