force-app/main/default/objects/Digital_Main_Street__c/fields/Is_Your_Site_Mobile_Friendly__c.field-meta.xml
<CustomField>
    <fullName>Is_Your_Site_Mobile_Friendly__c</fullName>
    <inlineHelpText>Mobile friendly means that your website also displays well on small and medium sized screens. If you provide your mobile visitors with a better experience so they’ll be more likely to stick around and engage with you.</inlineHelpText>
    <label>Is Your Site Mobile Friendly?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>