force-app/main/default/objects/Digital_Main_Street__c/fields/Linkedin__c.field-meta.xml
<CustomField>
    <fullName>Linkedin__c</fullName>
    <formula>Account_DMS__r.Linkedin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linkedin</label>
    <type>Text</type>
</CustomField>