force-app/main/default/objects/Digital_Main_Street__c/fields/Number_Of_Visits__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Visits__c</fullName>
    <label>Number Of Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>