force-app/main/default/objects/Digital_Main_Street__c/fields/Opt_in_Microsoft__c.field-meta.xml
<CustomField>
    <fullName>Opt_in_Microsoft__c</fullName>
    <label>Opt-in Microsoft</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>