force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Analytics_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Other_Analytics_Tracking__c</fullName>
    <label>Other(Analytics Tracking)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>