force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Area__c.field-meta.xml
<CustomField>
    <fullName>Other_Area__c</fullName>
    <label>Other(Area of Interest)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>