force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Backup__c.field-meta.xml
<CustomField>
    <fullName>Other_Backup__c</fullName>
    <label>Other(Backup)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>