force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Beacon_Technology__c.field-meta.xml
<CustomField>
    <fullName>Other_Beacon_Technology__c</fullName>
    <label>Other(Beacon Technology)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>