force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Blog__c.field-meta.xml
<CustomField>
    <fullName>Other_Blog__c</fullName>
    <label>Other(Blog)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>