force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Other_Campaigns__c</fullName>
    <label>Other(Campaigns)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>