force-app/main/default/objects/Digital_Main_Street__c/fields/Other_CMS__c.field-meta.xml
<CustomField>
    <fullName>Other_CMS__c</fullName>
    <label>Other(CMS)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>