force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Customer_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Other_Customer_Engagement__c</fullName>
    <label>Other(Customer Engagement)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>