force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Digital_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Other_Digital_Inventory__c</fullName>
    <label>Other(Digital Inventory)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>