force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Digital_Tools__c.field-meta.xml
<CustomField>
    <fullName>Other_Digital_Tools__c</fullName>
    <label>Other(Digital Tools)</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>