force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Ecommerce__c.field-meta.xml
<CustomField>
    <fullName>Other_Ecommerce__c</fullName>
    <label>Other(Ecommerce)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>