force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Email_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Other_Email_Newsletter__c</fullName>
    <label>Other(Email Newsletter)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>