force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Facebook_Ads__c.field-meta.xml
<CustomField>
    <fullName>Other_Facebook_Ads__c</fullName>
    <label>Other(Facebook Ads)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>