force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Free_Internet__c.field-meta.xml
<CustomField>
    <fullName>Other_Free_Internet__c</fullName>
    <label>Other(Free Internet)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>