force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Google_Review__c.field-meta.xml
<CustomField>
    <fullName>Other_Google_Review__c</fullName>
    <label>Other(Google Review)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>