force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Infrastructure__c.field-meta.xml
<CustomField>
    <fullName>Other_Infrastructure__c</fullName>
    <label>Other(Infrastructure)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>