force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Instore_Loyality_Programs__c.field-meta.xml
<CustomField>
    <fullName>Other_Instore_Loyality_Programs__c</fullName>
    <label>Other(Instore Loyality Programs)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>