force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Internet__c.field-meta.xml
<CustomField>
    <fullName>Other_Internet__c</fullName>
    <label>Other(Internet)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>