force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Lead_Generation__c.field-meta.xml
<CustomField>
    <fullName>Other_Lead_Generation__c</fullName>
    <label>Other(Lead Generation)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>