force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Local_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Other_Local_Initiative__c</fullName>
    <label>Other(Local Initiative)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>