force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Loyality_Program__c.field-meta.xml
<CustomField>
    <fullName>Other_Loyality_Program__c</fullName>
    <label>Other(Loyality Program)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>