force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Mobile_Friendly__c.field-meta.xml
<CustomField>
    <fullName>Other_Mobile_Friendly__c</fullName>
    <label>Other(Mobile Friendly)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>