force-app/main/default/objects/Digital_Main_Street__c/fields/Other_NoExpand__c.field-meta.xml
<CustomField>
    <fullName>Other_NoExpand__c</fullName>
    <label>Other (NoExpand)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>