force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Online_Loyalty_Programs__c.field-meta.xml
<CustomField>
    <fullName>Other_Online_Loyalty_Programs__c</fullName>
    <label>Other(Online Loyalty Programs)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>