force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Online_Service__c.field-meta.xml
<CustomField>
    <fullName>Other_Online_Service__c</fullName>
    <label>Other(Online Service)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>