force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Payment_Processing__c.field-meta.xml
<CustomField>
    <fullName>Other_Payment_Processing__c</fullName>
    <label>Other(Payment Processing)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>