force-app/main/default/objects/Digital_Main_Street__c/fields/Other_PaymentIntegratedPOS__c.field-meta.xml
<CustomField>
    <fullName>Other_PaymentIntegratedPOS__c</fullName>
    <label>Other(PaymentIntegratedPOS)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>