force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Pinterest__c.field-meta.xml
<CustomField>
    <fullName>Other_Pinterest__c</fullName>
    <label>Other(Pinterest)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>