force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Point_Of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Other_Point_Of_Sale__c</fullName>
    <label>Other(Point Of Sale)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>