force-app/main/default/objects/Digital_Main_Street__c/fields/Other_POS_Analytics__c.field-meta.xml
<CustomField>
    <fullName>Other_POS_Analytics__c</fullName>
    <label>Other(POS Analytics)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>