force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Productivity__c.field-meta.xml
<CustomField>
    <fullName>Other_Productivity__c</fullName>
    <label>Other(Productivity)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>