force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Restaurant_Reservations__c.field-meta.xml
<CustomField>
    <fullName>Other_Restaurant_Reservations__c</fullName>
    <label>Other(Restaurant Reservations)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>