force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Search_Engine_Optimization__c.field-meta.xml
<CustomField>
    <fullName>Other_Search_Engine_Optimization__c</fullName>
    <label>Other(Search Engine Optimization)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>