force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Service_Reservations__c.field-meta.xml
<CustomField>
    <fullName>Other_Service_Reservations__c</fullName>
    <label>Other(Service Reservations)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>