force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Social_Conversation__c.field-meta.xml
<CustomField>
    <fullName>Other_Social_Conversation__c</fullName>
    <label>Other(Social Conversation)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>